--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div> 
             <div id="top-right">
                 <div id="top-right-block">
-                    <img id="logo" src="/assets/logo.png" alt="Munami logo">
+                    <img id="logo" src="assets/logo.png" alt="Munami logo">
                     <h1 id="top-right-h1">LLegámos a tu casa!</h1>
                     <a id="top-right-button" href="#middle-top" class="btn btn-primary">Comprar!</a>
                 </div>
